--- a/adventure.html
+++ b/adventure.html
@@ -15,7 +15,9 @@
 <div class="row">
 	<div class="col-md-3"><br></div>
 	<div class="choice-box shadowed col-md-6">
+		<div class="coins"><span> YOU HAVE ?? coins and ?? life</span></div>
 		<div class="welcome-screen">
+
 			<!-- CHAT HEADER -->
 			<div class="chat-window-header">
 				<div class="greeting-text col-md-9 col-md-offset-1">
