--- a/adventure.html
+++ b/adventure.html
@@ -15,7 +15,7 @@
 <div class="row">
 	<div class="col-md-3"><br></div>
 	<div class="choice-box shadowed col-md-6">
-		<div class="coins"><span> YOU HAVE ?? coins and ?? life</span></div>
+		<div class="coins"><span> YOU HAVE <span id="coins"></span> coins and <span id="life"></span> life</span></div>
 		<div class="welcome-screen">
 
 			<!-- CHAT HEADER -->
@@ -27,7 +27,7 @@
 
 				</div>
 			</div>
-			<!-- basice image-->
+			<!-- basic image-->
 			<h2 class="name-text">What is your name?</h2>
 			<div class="form-group">
 				<div class="col-sm-12">
